# testmyapp

./: README.md
DeviseOS/DeviseOS/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  todo.md
DeviseOS/DeviseOS/backend/: ARCHITECTURE_SUMMARY.md  Dockerfile  README.md  docker-compose.yml  env.example  main.py  main_simple.py  pyproject.toml  requirements.txt  test_setup.py
DeviseOS/DeviseOS/backend/deviseos/: __init__.py
DeviseOS/DeviseOS/backend/deviseos/api/: app.py  app_simple.py
DeviseOS/DeviseOS/backend/deviseos/api/middleware/: __init__.py  audit.py  auth.py  rate_limit.py  request_id.py
DeviseOS/DeviseOS/backend/deviseos/api/routers/: __init__.py  ai_processing.py  auth.py  health.py  notebooks.py  plugins.py  sync.py  voice_annotations.py
DeviseOS/DeviseOS/backend/deviseos/core/: __init__.py  config.py  database.py  logging.py  monitoring.py  redis.py
DeviseOS/DeviseOS/backend/deviseos/models/: base.py  notebook.py  user.py
DeviseOS/DeviseOS/src/: App.tsx  index.css  main.tsx  style.css
DeviseOS/DeviseOS/src-tauri/: Cargo.toml  tauri.conf.json
DeviseOS/DeviseOS/src-tauri/src/: ai.rs  config.rs  database.rs  encryption.rs  errors.rs  lib.rs  main.rs  models.rs  storage.rs  sync.rs
DeviseOS/DeviseOS/src/components/: AIAssistant.tsx  AdvancedSearch.tsx  EditorToolbar.tsx  Layout.tsx  MediaUpload.tsx  NotebookLayout.tsx  NotebookSidebar.tsx  PageEditor.tsx  PageLinking.tsx  TabBar.tsx  TabContent.tsx  TabManager.tsx
DeviseOS/DeviseOS/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Textarea.tsx
DeviseOS/DeviseOS/src/contexts/: NotebookContext.tsx  NotesContext.tsx  TabContext.tsx  ThemeContext.tsx
DeviseOS/DeviseOS/src/pages/: Dashboard.tsx  NoteEditor.tsx  Search.tsx  Settings.tsx
backend/: README.md  app.py
frontend/: README.md  app.js  index.html  styles.css
frontend/pages/: About.js  Cart.js  Checkout.js  Contact.js  HomePage.js  NotFound.js  Orders.js  ProductDetails.js  Products.js  Wishlist.js
